# hapack

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/hapack/: __init__.py  hamiltonian.py  hessenberg.py  symplectic.py
tests/: test_hamiltonian.py  test_hessenberg.py  test_symplectic.py
