[project]
name = "hapack"
version = "0.0.0"
description = "Package for solving (skew-)Hamiltonian eigenvalue problems"
readme = "README.md"
authors = [
    { name = "Luca Wellmeier", email = "luca.wellmeier@uit.no" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
